# llvm-function-argument-instantiation

./: .gitignore  CMakeLists.txt  README.md  runtest
FunctionArgumentInstantiation/: .FunctionArgumentInstatiation.cpp.swm  .FunctionArgumentInstatiation.cpp.swn  .FunctionArgumentInstatiation.cpp.swo  CMakeLists.txt  FunctionArgumentInstatiation.cpp
test_codes/: example1.c  example1.hello.bc  example1.hello.ll  example2.bc  example2.hello.bc  example2.hello.ll  example3.bc  example3.hello.bc  example3.hello.ll  example4.bc  example4.hello.bc  example4.hello.ll
